tests/baselines/reference/legacy-non-octal-escape-sequence-strict.errors.txt
legacy-non-octal-escape-sequence-strict.ts(26,2): error TS1487: Octal escape sequences are not allowed. Use the syntax '\x00'.


==== legacy-non-octal-escape-sequence-strict.ts (1 errors) ====
    // Copyright (C) 2017 Kevin Gibbons. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-template-literal-lexical-components
    description: LegacyOctalEscapeSequence is not available in template literals
    info: |
      TemplateCharacter ::
        $ [lookahead ≠ {]
        \ TemplateEscapeSequence
        \ NotEscapeSequence
        LineContinuation
        LineTerminatorSequence
        SourceCharacter but not one of ` or \ or $ or LineTerminator
      TemplateEscapeSequence ::
        CharacterEscapeSequence
        0 [lookahead ∁EDecimalDigit]
        HexEscapeSequence
        UnicodeEscapeSequence
    flags: [onlyStrict]
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    '\08';
     ~~
!!! error TS1487: Octal escape sequences are not allowed. Use the syntax '\x00'.
    